Fix icon alignment

--- a/src/less/base.less
+++ b/src/less/base.less
@@ -1039,9 +1039,10 @@ footer .fa-heart {
 		width: 48px;
 		height: 48px;
 		border-radius: 50%;
-		text-align: center;
-		padding-top: 10px;
 		left: calc(~"50% - 24px");
+		display: flex;
+		align-items: center;
+		justify-content: center;
 	}
 }
 
